objects/ASI_CRM_Image_Outlet_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Address__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_CN_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Application_Person__c</fullName>
        <label>Application Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Application_Reason__c</fullName>
        <label>Other Reason for Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approval_Submitter_Email__c</fullName>
        <label>Approval Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Last_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Image Outlet Request</relationshipLabel>
        <relationshipName>Image_Outlet_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CRM_Code__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_CN_CRM_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_CN_Chinese_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Outlet_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Outlet Plan</label>
        <referenceTo>ASI_CRM_Image_Outlet_Plan__c</referenceTo>
        <relationshipLabel>Image Outlet Request</relationshipLabel>
        <relationshipName>ASI_CRM_Image_Outlet_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Production_1__c</fullName>
        <label>Image Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Production_2__c</fullName>
        <label>Image Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Production_3__c</fullName>
        <label>Image Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Mobile_Phone__c</fullName>
        <label>PRC Sales Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Need_HQ_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need HQ Sponsor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Notificaton_Merchindising__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notificaton Merchindising</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Image_Outlet_Request3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Mobile_Phone__c</fullName>
        <description>Outlet Mobile Phone</description>
        <label>Outlet Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Segment_Image__c</fullName>
        <formula>TEXT(ASI_CRM_Outlet__r.ASI_CRM_CN_Image__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Segment-Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Segment_Volume__c</fullName>
        <formula>TEXT( ASI_CRM_Outlet__r.ASI_CRM_CN_Grade__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Segment-Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (CN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Image Outlet Request</relationshipLabel>
        <relationshipName>Image_Outlet_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_Region__r.ASI_CRM_Chinese_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted to AD</fullName>
                </value>
                <value>
                    <fullName>Approved by AD</fullName>
                </value>
                <value>
                    <fullName>Submitted to HQ Budget</fullName>
                </value>
                <value>
                    <fullName>Approved by HQ Budget</fullName>
                </value>
                <value>
                    <fullName>Submitted to RTMK</fullName>
                </value>
                <value>
                    <fullName>Preliminary Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted for Budget Approval</fullName>
                </value>
                <value>
                    <fullName>Budget Approved</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Channel__c</fullName>
        <formula>ASI_CRM_Outlet__r.ASI_CRM_CN_Sub_Channel__r.ASI_CRM_CN_Sub_Channel_Chi_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Image Outlet Request</relationshipLabel>
        <relationshipName>Image_Outlet_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Image Outlet Request (Sub-brand 2)</relationshipLabel>
        <relationshipName>Image_Outlet_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Image Outlet Request (Sub-brand 3)</relationshipLabel>
        <relationshipName>Image_Outlet_Request2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Image_Outlet_Request4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver Channel</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Image_Outlet_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver Region</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Image_Outlet_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Contacts</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Image_Outlet_Request2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Outlet_Contacts__c</fullName>
        <label>Outlet Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Image Outlet Request</label>
    <listViews>
        <fullName>ASI_CRM_CN_All_Image_Outlet_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Application_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Image Outlet (CN)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_All_Image_Outlet_OFF_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Application_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Outlet_Request__c.ASI_CRM_OFF</value>
        </filters>
        <label>All Image Outlet - OFF (CN)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_All_Image_Outlet_ON_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Application_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Outlet_Request__c.ASI_CRM_ON</value>
        </filters>
        <label>All Image Outlet - ON (CN)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_My_Image_Outlet_OFF_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Application_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Outlet_Request__c.ASI_CRM_OFF</value>
        </filters>
        <label>My Image Outlet - OFF (CN)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_My_Image_Outlet_ON_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Application_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Outlet_Request__c.ASI_CRM_ON</value>
        </filters>
        <label>My Image Outlet - ON (CN)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IOM-{000000}</displayFormat>
        <label>IOM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Outlet Request</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Image_Outlet_Request</fullName>
        <active>true</active>
        <label>CN Image Outlet Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_OFF</fullName>
        <active>true</active>
        <label>CN OFF</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_ON</fullName>
        <active>true</active>
        <label>CN ON</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>